opam-version: "2.0"
synopsis: "Test"
maintainer: "talex5@gmail.com"
authors: "talex5@gmail.com"
homepage: "https://github.com/talex5-ci/gql-test"
bug-reports: "https://github.com/talex5-ci/gql-test/issues"
dev-repo: "git+https://github.com/talex5-ci/gql-test.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
]
